# palinv

./: CMakeLists.txt  README.md
include/InverseSolver/: DirectSolverErrorCalculator.h  IDirectSolver.h  IPaletteFunction.h  InverseSolver.h  InversionInfo.h  LimitedModel.h  Model.h  TargetFunction.h
include/UniversalApproximation/: UniversalApproximationT.h
include/min/: argmin.h
src/InverseSolver/: IDirectSolver.cpp  IPaletteFunction.cpp  InverseSolver.cpp  InversionInfo.cpp  LimitedModel.cpp  Model.cpp  TargetFunction.cpp
src/min/: argmin.cpp
